fix overflow

--- a/app/components/Hero/hero.module.css
+++ b/app/components/Hero/hero.module.css
@@ -30,6 +30,7 @@
 
 .heroButtonContainer {
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
